fixed extra margin at the bottom

--- a/style.css
+++ b/style.css
@@ -285,6 +285,7 @@ footer p {
 	color: #CCC;
 	text-align: center;
 	line-height: 100px;
+	margin: 0px;
 	font-size: 30px!important;
 }
 
